<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.vt.cs.cs5254.multiquiz.MainActivity">

    <TextView
        android:id="@+id/question_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        tools:text="@string/question_aus_capital"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/answerContainer"
        android:layout_width="134dp"
        android:layout_height="200dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/adminContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_textview"
        app:layout_constraintVertical_bias="0.276">

        <Button
            android:id="@+id/answer_button0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/answer_brisbane" />

        <Button
            android:id="@+id/answer_button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/answer_canberra" />

        <Button
            android:id="@+id/answer_button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/answer_perth" />

        <Button
            android:id="@+id/answer_button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/answer_sydney" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/adminContainer"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/hint_button"
            android:layout_width="7dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:text="@string/hint_button" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/submit_button" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
